fix imagen de registro de asis.